fix footer overflow x

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -94,9 +94,8 @@ li {
 
 .error404 {
   min-height: 100vh;
-  display: flex;
+  @include flex(column);
   justify-content: space-between;
-  flex-direction: column;
   }
 
 .error404 .main {
