--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -41,8 +41,9 @@
     width: unset;
   }
   .info {
-    min-width: 400px;
+    min-width: 300px;
     width: 50%;
+    max-width: 100vw;
   }
   .left {
     margin-right: 10%;
